crates/reinhardt-pages/tests/ui/page/fail/numeric_attr_bool_literal.rs
//! page! macro with numeric attribute having boolean literal

use reinhardt_pages::page;

fn main() {
	let _invalid = page!(|| {
		input {
			r#type: "number",
			min: true,
		}
	});
}
